--- a/web/themes/custom/gpw/src/components/meetings/meeting.scss
+++ b/web/themes/custom/gpw/src/components/meetings/meeting.scss
@@ -27,6 +27,7 @@
     .content {
       color: $text-muted;
       display: flex;
+      flex-wrap: wrap;
 
       .field + .field:before {
         content: '|';
